added sixth div

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </div>
                         <div class="mainCards">
                             <div class="mainCardTop">
-                                <img src="images/trangle.png" alt="">
+                                <img src="images/Cart_Penciles.png" alt="">
                             </div>
                             <div class="mainCardBotom">
                                 <div class="mainCardBotomInner">
@@ -200,7 +200,7 @@
                         </div>
                         <div class="mainCards">
                             <div class="mainCardTop">
-                                <img src="images/trangle.png" alt="">
+                                <img src="images/yellow.png" alt="">
                             </div>
                             <div class="mainCardBotom">
                                 <div class="mainCardBotomInner">
@@ -218,7 +218,7 @@
                         </div>
                         <div class="mainCards">
                             <div class="mainCardTop">
-                                <img src="images/trangle.png" alt="">
+                                <img src="images/cart_pencil_2.png" alt="">
                             </div>
                             <div class="mainCardBotom">
                                 <div class="mainCardBotomInner">
@@ -238,6 +238,9 @@
                 </div>
             </div>
 
+        </div>
+        <div class="sixthBody">
+            
         </div>
         
     </section>
