--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- awesome for icons, main cdn here -->
     <script src="https://kit.fontawesome.com/8ed6fe1c6e.js" crossorigin="anonymous"></script>
 </head>
