--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                 </div>
                 <div class="boyRight">
-                    <img src="/images/boy.png" alt="">
+                    <img src="images/boy.png" alt="">
                 </div>
             </div>
         </header>
