--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="images/icons/cHallIcon.ico">
+    <title>School</title>
     <link rel="stylesheet" href="style.css">
     <!-- awesome for icons, main cdn here -->
     <script src="https://kit.fontawesome.com/8ed6fe1c6e.js" crossorigin="anonymous"></script>
