--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
                     </div>
                     <div class="sevenColscls">
-                        <div><img  src="images/circle_woman.png" alt=""></div>
+                        <div><img  src="images/circle_man-.png" alt=""></div>
                         <div class="sevenBodyCls">
                             <p>Slate helps you see how many more days 
                                 you need to work to reach your financial 
