--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     </ul>
                   </div>
                   <div class="footer-col">
-                    <h4>Legal</h4>
+                    <h4>Resources</h4>
                     <ul class="links">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Carrier</a></li>
@@ -405,19 +405,18 @@
                     </ul>
                   </div>
                   <div class="footer-col">
-                    <h4>Legal</h4>
+                    <h4>Get In Touch</h4>
                     <ul class="links">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Carrier</a></li>
-                        <li><a href="#">We are heiring</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="#"><i class="fa-solid fa-phone"></i> (480) 555-0103</a></li>
+                        <li><a href="#">4517 Washington Ave 39495</a></li>
+                        <li><a href="#"><i class="fa-regular fa-envelope"></i> debra.holt@example.com</a></li>
                     </ul>
                         
                     <div class="icons">
                       <i class="fa-brands fa-facebook-f"></i>
                       <i class="fa-brands fa-twitter"></i>
                       <i class="fa-brands fa-linkedin"></i>
-                      <i class="fa-brands fa-github"></i>
+                      <!-- <i class="fa-brands fa-github"></i> -->
                     </div>
                   </div>
                  
