--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     </ul>
                   </div>
                   <div class="footer-col">
-                    <h4>Legal</h4>
+                    <h4>Features</h4>
                     <ul class="links">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Carrier</a></li>
@@ -407,9 +407,9 @@
                   <div class="footer-col">
                     <h4>Get In Touch</h4>
                     <ul class="links">
-                        <li><a href="#"><i class="fa-solid fa-phone"></i> (480) 555-0103</a></li>
-                        <li><a href="#">4517 Washington Ave 39495</a></li>
-                        <li><a href="#"><i class="fa-regular fa-envelope"></i> debra.holt@example.com</a></li>
+                        <li><a href="#"><img src="images/icons/phone.png" alt=""></i> (480) 555-0103</a></li>
+                        <li><a href="#"><img src="images/icons/map.png" alt=""> 4517 Washington Ave 39495</a></li>
+                        <li><a href="#"><img src="images/icons/send_email.png" alt=""></i> debra.holt@example.com</a></li>
                     </ul>
                         
                     <div class="icons">
